--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clay-driver-tests",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Tests for ClayDB drivers",
   "main": "lib",
   "browser": "ci/browser",
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/realglobe-Inc/clay-driver-tests#readme",
   "dependencies": {
     "clay-constants": "^1.3.1",
-    "clay-driver-memory": "^2.1.2",
-    "co": "^4.6.0"
+    "co": "^4.6.0",
+    "colorprint": "^4.1.0"
   },
   "devDependencies": {
     "aglob": "^2.0.1",
@@ -36,6 +36,7 @@
     "ape-tasking": "^4.0.9",
     "ape-tmpl": "^5.0.20",
     "ape-updating": "^4.1.0",
+    "clay-driver-memory": "^2.1.3",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
     "stringcase": "^3.2.1",
