Add resource schema test

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/realglobe-Inc/clay-driver-tests#readme",
   "dependencies": {
-    "clay-constants": "^1.3.1",
+    "aschema": "^2.0.4",
+    "clay-constants": "^2.4.1",
+    "clay-schemas": "^2.0.2",
     "co": "^4.6.0",
     "colorprint": "^4.1.0"
   },
@@ -36,7 +38,7 @@
     "ape-tasking": "^4.0.9",
     "ape-tmpl": "^5.0.20",
     "ape-updating": "^4.1.0",
-    "clay-driver-memory": "^2.1.3",
+    "clay-driver-memory": "^3.0.3",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
     "stringcase": "^3.2.1",
