--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/realglobe-Inc/clay-driver-tests#readme",
   "dependencies": {
     "aschema": "^2.0.4",
-    "clay-constants": "^2.4.1",
+    "clay-constants": "^2.5.1",
     "clay-schemas": "^2.0.2",
     "co": "^4.6.0",
     "colorprint": "^4.1.0"
@@ -38,9 +38,12 @@
     "ape-tasking": "^4.0.9",
     "ape-tmpl": "^5.0.20",
     "ape-updating": "^4.1.0",
+    "asleep": "^1.0.3",
     "clay-driver-memory": "^3.0.3",
+    "clay-driver-sqlite": "^2.0.1",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
+    "rimraf": "^2.6.1",
     "stringcase": "^3.2.1",
     "sugos-travis": "^2.0.7"
   },
