--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "ape-releasing": "^4.0.4",
     "ape-tasking": "^4.0.9",
     "ape-tmpl": "^5.0.20",
-    "ape-updating": "^4.1.0",
+    "ape-updating": "^4.1.1",
     "asleep": "^1.0.3",
-    "clay-driver-memory": "^4.0.1",
+    "clay-driver-memory": "^4.0.4",
+    "clay-driver-sequelize": "^3.0.10",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "rimraf": "^2.6.1",
-    "stringcase": "^3.2.1",
+    "sqlite3": "^3.1.8",
+    "stringcase": "^4.0.0",
     "sugos-travis": "^2.0.7"
   },
   "engines": {
